# bb-envy

./: .gitignore  TODO  tsconfig.json
docs/: Code-Envy_Specifications.html  Journal.css
src/: envy.d.ts  index.d.ts  vx_sk.js
src/lib/capso/: capso.ts
src/lib/eulrvisor/: Eulrvisor.ts  mod.d.ts
src/lib/eulrvisor/Fafnir/: Fafnir.ts
src/lib/galahad/: galahad.ts  mod.d.ts  target_collection.json
src/lib/galahad/lib/andromeda/: andromeda.ts
src/lib/galahad/lib/axioms/: deposit.ts  exploit.ts  sourcefiles.ts  spoof.ts
src/lib/galahad/tasks/: call_andromeda.ts  call_galahad.ts  call_genXAVT.ts
src/lib/tkit/: Log.ts  Toolkit.ts
src/tasks/: call_Eulr.ts
util/parallel/: Cargo.toml
util/parallel/src/: Client.rs  echo.rs  handlers.rs  main.rs  sub.rs  ws.rs
