[package]
name = "Parallel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = "0.3.28"
log = "0.4.17"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = {version = "1.27.0", features = ["full"]}
tokio-stream = "0.1.14"
tokio-tungstenite = "0.18.0"
warp = "0.3.5"

[dev-dependencies]
env_logger = "0.10.0"
simple_logger = "4.1.0"

[dependencies.simple_logger]
features = ["colors", "threads", "timestamps", "stderr"]
